# Assignment3_SPL

./: README.md
Client/: CMakeLists.txt  makefile
Client/include/: connectionHandler.h
Client/src/: Client.cpp  connectionHandler.cpp
Server/src/main/java/bgu/spl/net/api/: Message.java
Server/src/main/java/bgu/spl/net/impl/: BGSEncoderDecoder.java  BGSProtocol.java  ConnectionsImpl.java  Database.java  User.java
Server/src/main/java/bgu/spl/net/impl/Messages/: ACKMessage.java  BGSMessage.java  ErrorMessage.java  NotificationMessage.java  RequestMessage.java
Server/src/main/java/bgu/spl/net/srv/: BaseServer.java  BlockingConnectionHandler.java  ConnectionHandler.java  NonBlockingConnectionHandler.java  ReactorServer.java  TPCServer.java
